# equilibrium-solver

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  pyproject.toml
.github/workflows/: publish.yml
equilibrium_solver/: __init__.py  api.py
examples/: ammonia.py  calcium_carbonate.py  guide_and_validation.md  reforming.py  water_shift.py
include/: equilibrium_solver.hpp
src/: python_bindings.cpp  solver_core.cpp
